# AtWidgets

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  GenerateProjectFiles.bat
AT/: Assertions.cpp  Assertions.h  CMakeLists.txt  CoreDefines.h  CoreTypes.h  Error.cpp  Error.h  Format.cpp  Format.h  Log.cpp  Log.h  MemoryOperations.cpp  MemoryOperations.h  Span.h  String.cpp  String.h  StringView.cpp  StringView.h  Vector.h
Libraries/: CMakeLists.txt
Libraries/Core/: CMakeLists.txt  Widget.cpp  Widget.h
Libraries/Paint/: CMakeLists.txt  Painter.cpp  Painter.h
Libraries/RenderAPI/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h
Libraries/Rendering/: CMakeLists.txt  Renderer.cpp  Renderer.h
Libraries/VulkanAPI/: CMakeLists.txt  Context.cpp  Context.h
